--- a/iziozi/src/main/res/layout/editmode_alertview.xml
+++ b/iziozi/src/main/res/layout/editmode_alertview.xml
@@ -74,4 +74,36 @@
             android:text="@string/edit_board"
             android:id="@+id/editModeAlertActionBoard" />
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/swap_board"
+            android:id="@+id/editModeAlertActionMove"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_image"
+            android:id="@+id/editModeAlertActionDelete" />
+    </LinearLayout>
+
 </LinearLayout>
