--- a/iziozi/src/main/res/layout/activity_board.xml
+++ b/iziozi/src/main/res/layout/activity_board.xml
@@ -28,17 +28,57 @@
     android:id="@+id/rootContainer"
     android:background="#ffffffff">
 
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:layout_above="@+id/mainLayoutNavigationContainer"
-        android:background="#ff53ff8e"
-        android:id="@+id/mainLayoutTableContainer">
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:animateLayoutChanges="true"
+            android:id="@+id/leftnav_container"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp">
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="fill_parent"
+            android:background="#ff53ff8e"
+            android:id="@+id/mainLayoutTableContainer"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/leftnav_container"
+            android:layout_toLeftOf="@+id/rightnav_container"
+            android:layout_toStartOf="@+id/rightnav_container">
 
 
         </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:animateLayoutChanges="true"
+            android:id="@+id/rightnav_container"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -51,11 +91,12 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:id="@+id/leftLayoutNavigationContainer"
-            android:layout_marginLeft="20dp"
-            android:gravity="center"></LinearLayout>
+            android:layout_marginLeft="10dp"
+            android:gravity="left|center_vertical"></LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -65,8 +106,8 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="20dp"
-            android:gravity="center" />
+            android:layout_marginRight="10dp"
+            android:gravity="right|center_vertical" />
 
         <LinearLayout
             android:orientation="horizontal"
