--- a/iziozi/src/main/res/values/dimens.xml
+++ b/iziozi/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="navigation_bar_height">80dp</dimen>
     <dimen name="navigation_bar_button_size">60dp</dimen>
 
+    <dimen name="nav_buttons_size">150dp</dimen>
 
 
 </resources>
