--- a/iziozi/src/main/res/layout/activity_board.xml
+++ b/iziozi/src/main/res/layout/activity_board.xml
@@ -26,7 +26,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootContainer"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:descendantFocusability="beforeDescendants"
     android:background="#ffffffff">
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#01ffffff"
+        android:id="@+id/scanModeClickDetector"
+        android:visibility="gone"></RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -121,5 +131,6 @@
             android:layout_toStartOf="@+id/rightLayoutNavigationContainer"
             android:gravity="center" />
     </RelativeLayout>
+
 </RelativeLayout>
 
