--- a/iziozi/src/main/res/layout-land/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout-land/create_button_activity_layout.xml
@@ -26,7 +26,6 @@
     android:focusableInTouchMode="true"
     android:background="@android:color/white"
     android:focusable="true"
-    android:padding="20dp"
     android:id="@+id/mainLayout">
 
     <RelativeLayout
@@ -34,7 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="false"
         android:layout_alignParentLeft="false"
-        android:id="@+id/relativeLayout">
+        android:id="@+id/relativeLayout"
+        android:layout_margin="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -139,6 +139,28 @@
                     android:layout_marginLeft="10dp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/linearLayout"
+                android:gravity="center" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/application_name"
+                    android:id="@+id/textView4" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_application"
+                    android:id="@+id/app_status_text"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -225,7 +247,7 @@
         android:background="#a6000000"
         android:padding="30dp"
         android:id="@+id/createButtonOverlayView"
-        android:visibility="gone" >
+        android:visibility="invisible" >
 
         <FrameLayout
             android:layout_width="fill_parent"
