--- a/iziozi/src/main/res/layout/fragment_iopaginated_board.xml
+++ b/iziozi/src/main/res/layout/fragment_iopaginated_board.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2014 Martino Lessio -
   ~ www.martinolessio.com
   ~ martino [at] iziozi [dot] org
@@ -26,12 +25,9 @@
     android:layout_height="match_parent"
     tools:context="it.iziozi.iziozi.gui.IOPaginatedBoardFragment">
 
-    <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <it.iziozi.iziozi.core.IOViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewPager"
-        android:background="@android:color/holo_green_dark"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
-
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_green_dark"></it.iziozi.iziozi.core.IOViewPager>
 </FrameLayout>
