--- a/iziozi/src/main/res/menu/create_button.xml
+++ b/iziozi/src/main/res/menu/create_button.xml
@@ -21,15 +21,17 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/manageMedias"
         android:title="@string/manage_medias"
-        android:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        />
 
     <item android:id="@+id/search"
         android:title="@android:string/search_go"
         android:icon="@android:drawable/ic_menu_search"
-        android:showAsAction="ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
