--- a/iziozi/src/main/res/layout/fragment_tutorial_viewpager.xml
+++ b/iziozi/src/main/res/layout/fragment_tutorial_viewpager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2014 Martino Lessio -
+  ~ Copyright (c) 2015 Martino Lessio -
   ~ www.martinolessio.com
   ~ martino [at] iziozi [dot] org
   ~
@@ -19,16 +19,16 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/vp_tutorial"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="it.iziozi.iziozi.gui.IOPaginatedBoardFragment">
+    android:layout_height="match_parent">
 
-    <it.iziozi.iziozi.core.IOViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_green_dark"></it.iziozi.iziozi.core.IOViewPager>
+    <android.support.v4.view.PagerTitleStrip
+        android:id="@+id/vp_pager_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#f59400" />
 
-</FrameLayout>
+</android.support.v4.view.ViewPager>
+
