--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -32,6 +32,7 @@
         android:orderInCategory="21"
         android:showAsAction="never"
         android:title="@string/settings" />
+
     <item android:title="@string/manage_boards">
         <menu>
 
@@ -90,5 +91,10 @@
         android:showAsAction="never"
         android:title="@string/exit" />
 
+    <item
+        android:id="@+id/action_tutorial"
+        android:orderInCategory="22"
+        android:showAsAction="never"
+        android:title="@string/tutorial" />
 
 </menu>
