--- a/iziozi/src/main/res/layout/settings_layout.xml
+++ b/iziozi/src/main/res/layout/settings_layout.xml
@@ -86,11 +86,41 @@
         android:text="Row"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+
+    <LinearLayout
+        android:id="@+id/spinner_wrap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TextView01"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="horizontal"
+        android:layout_marginTop="35dp">
+
+        <TextView
+            android:layout_weight="5"
+            android:id="@+id/tv_language"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="@string/language"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:gravity="center_vertical" />
+
+        <Spinner
+            android:layout_weight="4"
+            android:id="@+id/spinner_lang"
+            android:layout_width="0dp"
+            android:layout_gravity="center|right"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/bordersCheckbox"
         android:checked="false"
+        android:layout_below="@+id/spinner_wrap"
         android:layout_alignTop="@+id/recordingTextView"
         android:layout_alignRight="@+id/numColsLbl"
         android:layout_alignEnd="@+id/numColsLbl" />
@@ -101,10 +131,10 @@
         android:layout_height="wrap_content"
         android:text="@string/show_borders"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@+id/TextView01"
+        android:layout_below="@+id/spinner_wrap"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView5"
