Implemented support for generating PDF documents from pictograms.

--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -97,4 +97,10 @@
         android:showAsAction="never"
         android:title="@string/tutorial" />
 
+    <item
+        android:id="@+id/action_create_pdf"
+        android:orderInCategory="23"
+        android:showAsAction="never"
+        android:title="Create pdf" />
+
 </menu>
