Added support for creating new boards by speaking a set of words.
The implementation searched for each word and if it finds just one it downloads it. If there are multiple words it presents a grid with all the results.

--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -103,4 +103,10 @@
         android:showAsAction="never"
         android:title="Create pdf" />
 
+    <item
+        android:id="@+id/action_create_board_speech"
+        android:orderInCategory="22"
+        android:showAsAction="never"
+        android:title="@string/create_board_speech" />
+
 </menu>
