--- a/iziozi/src/main/res/layout/settings_layout.xml
+++ b/iziozi/src/main/res/layout/settings_layout.xml
@@ -146,4 +146,24 @@
         android:layout_alignLeft="@+id/swipe_checkbox"
         android:layout_alignStart="@+id/swipe_checkbox" />
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enable_label"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_below="@+id/bignav_checkbox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/label_checkbox"
+        android:checked="false"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_alignLeft="@+id/swipe_checkbox"
+        android:layout_alignStart="@+id/swipe_checkbox" />
+
 </RelativeLayout>
