--- a/iziozi/src/main/res/layout/speech_board_activity.xml
+++ b/iziozi/src/main/res/layout/speech_board_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/speechBoardWordsLayout"
-                android:text="Done" />
+                android:text="@string/done" />
 
         </LinearLayout>
 
