--- a/iziozi/src/main/res/layout/activity_about.xml
+++ b/iziozi/src/main/res/layout/activity_about.xml
@@ -74,35 +74,9 @@
         android:background="@null"
         android:scaleType="centerInside"
         android:onClick="openGithub"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageButton
-        android:layout_width="@dimen/social_icons"
-        android:layout_height="@dimen/social_icons"
-        android:id="@+id/imageButton4"
-        android:src="@drawable/tw_logo"
-        android:background="@null"
-        android:scaleType="centerInside"
-        android:onClick="openTw"
-        android:layout_toEndOf="@+id/audiolistDeleteButton"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/audiolistRecordButton"
         android:layout_toRightOf="@+id/audiolistDeleteButton"
-        android:layout_marginLeft="8dp" />
-
-    <ImageButton
-        android:layout_width="@dimen/social_icons"
-        android:layout_height="@dimen/social_icons"
-        android:id="@+id/imageButton5"
-        android:src="@drawable/gplus_logo"
-        android:background="@null"
-        android:scaleType="centerInside"
-        android:onClick="openGplus"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/audiolistPlayButton"
-        android:layout_toStartOf="@+id/audiolistPlayButton"
-        android:layout_marginRight="8dp" />
+        android:layout_toEndOf="@+id/audiolistDeleteButton" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -122,8 +96,7 @@
             android:layout_toLeftOf="@+id/editModeAlertActionPicture"
             android:layout_toStartOf="@+id/editModeAlertActionPicture"
             android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="@dimen/logo_margin_bottom"/>
+            android:layout_marginRight="4dp" />
 
     </LinearLayout>
 
@@ -167,5 +140,14 @@
             android:layout_toEndOf="@+id/editModeAlertActionPicture"
             android:layout_marginLeft="8dp" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:id="@+id/imageView3"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/audiolistRecordButton"
+        android:layout_toEndOf="@+id/audiolistRecordButton"
+        android:src="@drawable/upo" />
 
 </RelativeLayout>
