--- a/iziozi/src/main/res/menu/create_button.xml
+++ b/iziozi/src/main/res/menu/create_button.xml
@@ -32,6 +32,6 @@
     <item android:id="@+id/search"
         android:title="@android:string/search_go"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
