--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -59,6 +59,12 @@
                 android:orderInCategory="32"
                 android:showAsAction="never"
                 android:title="@string/load" />
+
+            <item
+                android:id="@+id/action_export"
+                android:orderInCategory="32"
+                android:showAsAction="never"
+                android:title="@string/export" />
         </menu>
     </item>
 
